--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,6 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>18</java.version>
-		<maven.compiler.source>1.8</maven.compiler.source>
- 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -85,6 +83,10 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+
+					<source>11</source>
+                    <target>11</target>
+
 				</configuration>
 			</plugin>
 		</plugins>
